topology-spread-contraints/base/route-hello.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: hello
    app.kubernetes.io/component: hello
    app.kubernetes.io/instance: hello
  name: hello
spec:
  port:
    targetPort: web
  to:
    kind: Service
    name: hello
    weight: 100
  wildcardPolicy: None
